# quant-starter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: bollinger.yaml  donchian.yaml  pairs_kopep.yaml  rsi2.yaml  sma_cross.yaml  tsmom.yaml  tsmom_voltarget.yaml  turn_of_month.yaml  vix_carry.yaml  xsmom_panel.yaml  xsmom_riskparity.yaml
docs/: BACKLOG.md
migrations/: env.py
migrations/versions/: 0001_init.py
notebooks/: 01_eda.ipynb  02_mean_reversion.ipynb  03_pairs_trading.ipynb  04_breakout.ipynb  05_carry_seasonality.ipynb  06_overlays.ipynb
scripts/: backtest.py  live_paper.py
src/backtest/: runner.py
src/data/: fetch.py  store.py
src/db/: __init__.py  engine.py  models.py
src/execution/: alpaca_client.py
src/risk/: sizing.py  vol.py
src/strategies/: base.py  bollinger.py  donchian.py  momentum.py  pairs.py  registry.py  rsi2.py  seasonality.py  sma_cross.py  vix_carry.py  xsmom.py
src/strategies/overlays/: risk_parity.py  vol_target.py
tests/: test_new_strategies.py  test_overlays.py  test_runner_orders_path.py  test_strategies.py
