[project]
name = "finances"
version = "0.1.0"
description = "Quant trading research + paper sandbox"
requires-python = ">=3.11"
dependencies = [
    "vectorbt>=0.26",
    "pandas>=2.2",
    "numpy>=1.26",
    "polars>=1.0",
    "yfinance>=0.2.40",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "alpaca-py>=0.30",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "loguru>=0.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
